crystal-facet-uml (1.43.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Timing and sequence diagrams do not show a 2d snap region while dragging
  * Errors at parsing json are shown to user including the line of occurrence
  * json export omits ids of linked objects, only uuids are exported

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 01 Nov 2022 14:00:00 +0200

crystal-facet-uml (1.42.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * relationships connecting ports to inner sub-components avoid parent border
  * relationships: fine tuning straight lines and centered-preference
  * relationships: search for good free spaces avoids crossings; stats from
    layout_good_cases: ERR=0, W/C=7, W/F=167, W/R=59
    layout_challenging_cases: ERR=64, W/C=8033, W/F=8379, W/R=5408
    improved to
    layout_good_cases: ERR=0, W/C=7, W/F=167, W/R=72
    layout_challenging_cases: ERR=64, W/C=8033, W/F=8379, W/R=5307
  * relationships: dropped idea of overlapping same-typed arrows
  * relationships: avoid L, r, 7, J pattern-parts in respective corners

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 01 Oct 2022 14:00:00 +0100

 crystal-facet-uml (1.41.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * relationships prefer centered over uncentered departure and arrival
  * relationships have a minimum gap distance towards all classifiers
  * relationships keep distance to symbol boxes of features
  * relationships keep distance to neighbor relationships
  * relationships can be simple straight lines
  * json: forward slashes are only decoded, not encoded in json anymore

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 11 Sep 2022 09:00:00 +0100

crystal-facet-uml (1.40.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * A single filename-parameter allows to open files by drag-n-drop on win
  * while exporting, the status line states "Exporting..."
  * Create-diagram icons highlight at mouse-over