@@ -21,7 +21,6 @@ ideas for future versions:
   [?] sequence diagrams need if/loop-boxes
   [?] activity diagrams need swimlanes/partitions
   @io
-! [ ] dedicated error notifications on read-only json files and parent directories needed
   [ ] export formats: enhance xmi standard compliance
   [?] import XMI format
   [ ] xmi export is not spec-compliant for uml:Port, provided and required Interfaces
@@ -48,6 +47,7 @@ ideas for future versions:
       interactionuse(diag-reference)-to-fragment(diag);
       part-to-component, object-to-class
   [ ] links unclear: provided/required-interface(feature)-to-interface(classifier)
+  [ ] Should subsystems/boundaries have features? currently forbidden.
   @ctrl
   [ ] delete features immediately when they become invisible in all diagrams (note: the search+xmi+json export find them)
   [ ] delete relationships immediately when they become invisible in all diagrams (note: the search+xmi+json export find them)
