@@ -4,6 +4,7 @@ crystal-facet-uml (1.43.0) UNRELEASED; urgency=medium
   * Timing and sequence diagrams do not show a 2d snap region while dragging
   * Errors at parsing json are shown to user including the line of occurrence
   * json export omits ids of linked objects, only uuids are exported
+  * specific error message on read-only parent directories added
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 01 Nov 2022 14:00:00 +0200
 
